Fixed spacing between portfolio items

--- a/css/main.css
+++ b/css/main.css
@@ -346,7 +346,7 @@ h1.portfolio-header::after {
 
 .portfolio {
   text-align: center;
-  padding: 5em 0;
+  /* padding: 5em 0; */
 }
 
 .portfolio-items {
@@ -366,8 +366,6 @@ h1.portfolio-header::after {
 
 .portfolio-item {
   width: 50%;
-  margin-bottom: 10px;
-  margin: 0 auto;
   position: relative;
   overflow: hidden;
   max-width: 100%;
@@ -381,10 +379,10 @@ h1.portfolio-header::after {
 
 .portfolio-item img {
   display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  padding:0;
+  padding: 0;
   max-width: 100%;
+  width: 100%;
+  margin: -4px;
 }
 
 .portfolio-item figcaption {
